// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildHumanTaskComment (T101) > a task without options is byte-identical to the pre-013 document 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelType": "warning",
      },
      "content": [
        {
          "content": [
            {
              "text": "Agent has a question",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "text": "Which auth flow?",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "OAuth or API token?",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`buildHumanTaskComment (T101) > renders a blocking question with details 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelType": "warning",
      },
      "content": [
        {
          "content": [
            {
              "text": "Agent has a question",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "text": "Which auth flow?",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "OAuth or API token?",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`buildHumanTaskComment (T101) > renders answer options as a bullet list (label — description; value never rendered) 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelType": "warning",
      },
      "content": [
        {
          "content": [
            {
              "text": "Agent has a question",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "text": "Which migration strategy?",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "The config format change can break older readers.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Suggested answers:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "Migrate config format — Breaking, needs a major bump",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        {
          "content": [
            {
              "content": [
                {
                  "text": "Keep backward compat",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`buildRunComment (T051) > renders a failure report (error panel) 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelType": "error",
      },
      "content": [
        {
          "content": [
            {
              "text": "Run failed",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "text": "Implemented the ticket and ran tests.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": "brigadir-checks",
      },
      "content": [
        {
          "attrs": {
            "localId": "check-0",
            "state": "TODO",
          },
          "content": [
            {
              "text": "❌ tests_pass — 3 failing",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`buildRunComment (T051) > renders a needs_human report (warning panel) 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelType": "warning",
      },
      "content": [
        {
          "content": [
            {
              "text": "Run needs a human",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "text": "Implemented the ticket and ran tests.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": "brigadir-checks",
      },
      "content": [
        {
          "attrs": {
            "localId": "check-0",
            "state": "TODO",
          },
          "content": [
            {
              "text": "⏭ design_decision",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`buildRunComment (T051) > renders a success report (info panel + summary + taskList) 1`] = `
{
  "content": [
    {
      "attrs": {
        "panelType": "info",
      },
      "content": [
        {
          "content": [
            {
              "text": "Run succeeded",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "content": [
        {
          "text": "Implemented the ticket and ran tests.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": "brigadir-checks",
      },
      "content": [
        {
          "attrs": {
            "localId": "check-0",
            "state": "DONE",
          },
          "content": [
            {
              "text": "✅ tests_pass",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
        {
          "attrs": {
            "localId": "check-1",
            "state": "TODO",
          },
          "content": [
            {
              "text": "⚠ lint_pass — 2 warnings",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
